
(library
 (public_name diffast-langs-fortran.p)
 (name Mfortran_p)
 (libraries diffast-misc diffast-core
            diffast-langs-fortran-parsing
            diffast-langs-fortran-spec
            diffast-langs-fortran.base
            vlt)
 (preprocess
  (pps vlt.ppx -- -level %{env:DIFFAST_LOG_LEVEL=WARN}))
)

(plugin
 (name diffast_langs_fortran_p)
 (libraries diffast-langs-fortran.p)
 (site (diffast-core langs))
)