
(rule
 (action
  (write-file link_flags.txt "(-ccopt -Wl,-no_warn_duplicate_libraries)")
 )
 (enabled_if (= %{system} macosx))
)

(rule
 (action
  (write-file link_flags.txt "()")
 )
 (enabled_if (<> %{system} macosx))
)

(executable
 (public_name java-parser.exe)
 (name main)
 (package diffast-langs-java-parsing-cli)
 (libraries dynlink threads diffast-langs-java-parsing)
 (link_flags (:include link_flags.txt))
 (preprocess
  (pps vlt.ppx))
)

(install
 (section bin)
 (package diffast-langs-java-parsing-cli)
 (files java-parser-test java-parser-debug
 )
)
